--- a/vetcommunity-web/src/components/common/navbar/nav.css
+++ b/vetcommunity-web/src/components/common/navbar/nav.css
@@ -6,11 +6,13 @@
 .activated::before {
     content: "";
     display: block;
-    width: 100%;
+    width: 7px;
     margin-bottom: -13px;
-    height: 3px;
-    border-radius: 10px;
+    height: 7px;
+    border-radius: 50%;
     background-color: #4453FE;
     position: absolute;
     bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
